[gd_scene load_steps=3 format=3 uid="uid://wor75mympk80"]

[ext_resource type="Script" uid="uid://chh8w1c68bymn" path="res://common/interaction_component.gd" id="1_xh7ev"]

[sub_resource type="SphereShape3D" id="SphereShape3D_xh7ev"]
radius = 3.0

[node name="InteractionComponent" type="Node3D"]
script = ExtResource("1_xh7ev")

[node name="InteractRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractRange"]
shape = SubResource("SphereShape3D_xh7ev")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -11.5
offset_right = 47.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "E to interact"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="InteractRange" to="." method="_on_interact_range_area_entered"]
[connection signal="area_exited" from="InteractRange" to="." method="_on_interact_range_area_exited"]
